# Blokus

./: .gitignore  README.md  main.cpp
Blokus/: Application.cpp  Application.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  Main.cpp  MenuScene.cpp  MenuScene.h  ResourceHolder.h  ResourceIdentifiers.h  ResourceManager.cpp  ResourceManager.h  SFMLUtils.h  Scene.cpp  Scene.h  SettingsScene.cpp  SettingsScene.h  Sidebar.cpp  Sidebar.h  main.cpp
Blokus/Resource/Fonts/: Helvetica.cpp  Helvetica.hpp
BlokusTest/: core_test.cc  gtest_main.cc  resource_allocation.cc  ui_test.cc
ui_design/: game.drawio  menu_new.drawio  menu_user.drawio  pieces.drawio  rules.drawio
